navbar addition and style

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="en"></html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,7 @@
 
 </head>
 <body>
+    <div th:replace="~{layout/layout :: headerDefault}"></div>
     <div class="container">
         <h1></h1>
     </div>
