--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-    <div th:replace="~{layout/layout :: headerDefault}"></div>
+    <div th:replace="~{layout/layout :: header}"></div>
     <div class="container">
-        <h1></h1>
+        <h1>A</h1>
     </div>
 </body>
 </html>
