--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div th:replace="~{layout/layout :: header}"></div>
+    <div th:replace="~{fragments/layout :: header}"></div>
     <div class="container">
         <h1>A</h1>
     </div>
