--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header" style="min-height: 10%;">
         <script>
-            fetch('/fragments/header.html')
+            fetch('fragments/header.html')
                 .then(response => response.text())
                 .then(data => {
                 document.getElementById('header').innerHTML = data;
@@ -59,7 +59,7 @@
         </div>
 
         <div class="content2">
-            <img src="/images/dog.jpg" alt="placeholder">
+            <img src="images/dog.jpg" alt="placeholder">
         </div>
 
         <script>
@@ -98,7 +98,7 @@
 
     <div id="footer" style="min-height: 5%;">
         <script>
-            fetch('/fragments/footer.html')
+            fetch('fragments/footer.html')
                 .then(response => response.text())
                 .then(data => {
                 document.getElementById('footer').innerHTML = data;
