revision of home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li>Strengthen connections in both personal and professional relationships.</li>
                 </ul>
                 <br>
-                <p style="text-align: left;"><b>How I Can Help</b></p>
+                <p style="text-align: left;"><b>How I Can Help:</b></p>
                 <ul>
                     <li>Develop effective communication skills for personal and professional success.</li>
                     <li>Overcome speech challenges in a supportive and understanding environment.</li>
@@ -81,8 +81,8 @@
         </script>
     </div>
 
-    <div class="fade-in-section" style="background-color: white;">
-        <div class="booking">
+    <div class="booking" style="background-color: white;">
+        <div class="fade-in-section">
             <h1>Let’s Get Started</h1>
             <p>
                 Your journey to confident communication starts here. Whether you’re preparing for an important
