--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header" style="min-height: 10%;">
         <script>
-            fetch('fragments/header.html')
+            fetch('./fragments/header.html')
                 .then(response => response.text())
                 .then(data => {
                 document.getElementById('header').innerHTML = data;
@@ -97,7 +97,7 @@
 
     <div id="footer" style="min-height: 5%;">
         <script>
-            fetch('fragments/footer.html')
+            fetch('./fragments/footer.html')
                 .then(response => response.text())
                 .then(data => {
                 document.getElementById('footer').innerHTML = data;
