--- a/services.html
+++ b/services.html
@@ -23,11 +23,11 @@
         <div class="content1">
             <div class="fade-in-section">
                 <h1>Services & Pricing</h1>
-                <p style="border-bottom: 1px solid #5390ff;">
+                <p style="border-bottom: 1px solid #5390ff; padding-bottom: 3%; flex-grow: 1; flex-basis: 0;">
                     At Speak Savvy, I provide flexible and affordable communication coaching options to suit your
                     needs and goals. Explore the services and pricing below to find what works best for you.
                 </p>
-
+                <br>
                 <p style="text-align: left;"><b>1:1 Online Coaching</b></p>
                 <ul>
                     <li style="list-style-type: none;">
@@ -35,7 +35,7 @@
                         specific goals, offering convenience and professional guidance.
                     </li>
                 </ul>
-
+                <br>
                 <p style="text-align: left;"><b>1:1 In-Home Coaching</b></p>
                 <ul>
                     <li>
