--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <div class="content-wrapper">
     <div id="header" style="min-height: 10%;">
         <script>
             fetch('./fragments/header.html')
@@ -105,5 +106,6 @@
                 });
         </script>
     </div>
+</div>
 </body>
 </html>
