--- a/services.html
+++ b/services.html
@@ -24,7 +24,12 @@
             <div class="content1">
                 <div class="fade-in-section">
                     <h1>Services & Pricing</h1>
-                    <p style="border-bottom: 1px solid #5390ff; padding-bottom: 3%; flex-grow: 1; flex-basis: 0;">
+                    <p style="border-bottom: 1px solid #5390ff; padding-bottom: 3%;     margin-left: 12%;
+                    margin-right: 12%;
+                    padding-bottom: 3%;
+                    max-width: 90%;
+                    flex-grow: 1;
+                    flex-basis: 0;">
                         At Speak Savvy, I provide flexible and affordable communication coaching options to suit your
                         needs and goals. Explore the services and pricing below to find what works best for you.
                     </p>
