placeholder contact form

--- a/contact.html
+++ b/contact.html
@@ -22,43 +22,13 @@
 
         <div class="container">
             <div class="content1">
-                <div class="fade-in-section">
-                    <h1>About Me</h1>
-                    <p>
-                        Hi my name is Hannah! I’m a certified practicing speech-language pathologist with nearly four
-                        years of experience helping individuals transform their communication. My ultimate goal is to
-                        empower my clients to master their communication skills in a way that feels authentic, professional,
-                        and confident. I believe in creating a space where growth feels natural and achievable, 
-                        with a downto-earth approach that ensures you feel supported every step of the way. 
-                    </p>
-
-                    <h2>Why I became a coach</h2>
-                    <p>
-                        I’ve always been an extroverted person, but my journey with communication wasn’t always
-                        smooth. In high school, I struggled with public speaking anxiety and didn’t know how to truly
-                        portray myself. Despite wanting to connect with others, my communication style often pushed
-                        people away, leaving me feeling misunderstood and isolated.
-                    </p>
-                    <p>
-                        After high school, I had a realization: while I had gained confidence in speaking, my approach to
-                        communication still didn’t reflect who I truly was. I recognized that I needed to change how I
-                        expressed myself—not just to feel more authentic but to build meaningful relationships and succeed
-                        professionally. This shift allowed me to connect better with others and even helped me land jobs
-                        where my ability to communicate effectively became a strength.
-                    </p>
-                    <p>
-                        Fast forward to today, and that journey is at the heart of why I became a coach. I want to help others
-                        embrace their authentic selves while building the confidence to communicate effectively in any
-                        situation. Whether you’re looking to overcome speech challenges or refine how you connect with
-                        others, I’m here to guide you toward a version of yourself that feels both empowered and true to
-                        who you are. 
-                    </p>
-
-                    <p style="text-align: left;"><b>Cerifications</b></p>
-                    <ul>
-                        <li>2021 – Bachelor of Applied Science and Master of Speech Therapy at La Trobe University</li>
-                    </ul>
-                </div>
+                <h2>Contact Me</h2>
+                <form id="loginForm">
+                    <input type="text" name="name" placeholder="Full Name" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="inquiry" placeholder="Inquiry" required>
+                    <button type="submit" class="contact-button">Submit Details</button>
+                </form>
             </div>
 
             <div class="content2">
