placeholder faq page with style

--- a/faq.html
+++ b/faq.html
@@ -22,42 +22,159 @@
 
         <div class="container">
             <div class="content1">
-                <div class="fade-in-section">
-                    <h1>About Me</h1>
-                    <p>
-                        Hi my name is Hannah! I’m a certified practicing speech-language pathologist with nearly four
-                        years of experience helping individuals transform their communication. My ultimate goal is to
-                        empower my clients to master their communication skills in a way that feels authentic, professional,
-                        and confident. I believe in creating a space where growth feels natural and achievable, 
-                        with a downto-earth approach that ensures you feel supported every step of the way. 
-                    </p>
-
-                    <h2>Why I became a coach</h2>
-                    <p>
-                        I’ve always been an extroverted person, but my journey with communication wasn’t always
-                        smooth. In high school, I struggled with public speaking anxiety and didn’t know how to truly
-                        portray myself. Despite wanting to connect with others, my communication style often pushed
-                        people away, leaving me feeling misunderstood and isolated.
-                    </p>
-                    <p>
-                        After high school, I had a realization: while I had gained confidence in speaking, my approach to
-                        communication still didn’t reflect who I truly was. I recognized that I needed to change how I
-                        expressed myself—not just to feel more authentic but to build meaningful relationships and succeed
-                        professionally. This shift allowed me to connect better with others and even helped me land jobs
-                        where my ability to communicate effectively became a strength.
-                    </p>
-                    <p>
-                        Fast forward to today, and that journey is at the heart of why I became a coach. I want to help others
-                        embrace their authentic selves while building the confidence to communicate effectively in any
-                        situation. Whether you’re looking to overcome speech challenges or refine how you connect with
-                        others, I’m here to guide you toward a version of yourself that feels both empowered and true to
-                        who you are. 
-                    </p>
-
-                    <p style="text-align: left;"><b>Cerifications</b></p>
-                    <ul>
-                        <li>2021 – Bachelor of Applied Science and Master of Speech Therapy at La Trobe University</li>
+                <div class="faq-item">
+                    <h2 class="faq-question">What kind of coaching services do you offer?</h2>
+                    <div class="faq-answer">
+                        <p style="text-align: left;">I currently provide:</p>
+                        <ul>
+                            <li>
+                                <b>1:1 Online Coaching:</b> Flexible, private sessions conducted online, tailored to your specific
+                                communication goals. Perfect for those who prefer remote learning or live outside my travel
+                                area.
+                            </li>
+                            <li>
+                                <b>1:1 In-Home Coaching:</b> Personalized sessions delivered in the comfort of your own home,
+                                providing a relaxed and familiar environment for effective learning. <b>Note:</b> Travel costs may
+                                apply depending on your location.
+                            </li>
+                        </ul>
+                        <br>
+                        <p style="padding: 0;">
+                            Both services are designed to help you master your communication skills with a focus on
+                            authenticity, confidence, and professional growth.
+                        </p>
+                    </div>
+                </div>
                     </ul>
+
+                    <h2>Are you certified?</h2>
+                    <p>
+                        Yes, I hold a <b>Master’s degree in Speech Therapy</b> and have nearly four years of experience
+                        working with individuals and groups to enhance communication skills. My background includes:
+                    </p>
+                    <ul>
+                        <li>Extensive experience in one-on-one coaching.</li>
+                        <li>
+                            Leading group sessions designed to improve interpersonal and professional communication.
+                            This expertise allows me to provide a structured and effective approach to coaching,
+                            ensuring you achieve your goals.
+                        </li>
+                    </ul>
+
+                    <h2>What packages do you offer?</h2>
+                    <p style="text-align: left;">I offer three flexible options to suit your needs:</p>
+                    <ul>
+                        <li>
+                            <b>Single Sessions:</b> Ideal for quick, focused coaching on specific goals or as an introduction to
+                            my services.
+                        </li>
+                        <li>
+                            <b>Monthly Packages:</b>: Includes weekly coaching sessions and follow-up calls to provide
+                            consistent guidance and track progress.
+                        </li>
+                        <li>
+                            <b>3-Month Packages:</b> Designed for those seeking long-term transformation, this package
+                            offers structured support for sustained improvement.
+                        </li>
+                        <br>
+                        <p style="text-align: left; padding: 0;">
+                            You can find detailed pricing and inclusions on the <a href="./services.html">Services Page</a>
+                        </p>
+                    </ul>
+
+                    <h2>What is the length and frequency of your sessions?</h2>
+                    <ul>
+                        <li>
+                            <b>Single Sessions:</b>
+                            <ul>
+                                <li>45 minutes: For targeted coaching on specific communication challenges.</li>
+                                <li>1 hour: Comprehensive coaching for deeper exploration and progress.</li>
+                            </ul>
+                        </li>
+                        <br>
+
+                        <li>
+                            <b>Monthly Packages:</b> 
+                            <ul>
+                                <li>
+                                    Four 1-hour sessions (one per week) with four 15-minute follow-up calls for ongoing
+                                    support and accountability
+                                </li>
+                            </ul>
+                        </li>
+                        <br>
+
+                        <li>
+                            <b>3-Month Packages:</b> 
+                            <ul>
+                                <li>
+                                    Twelve 1-hour sessions (one per week) with twelve 15-minute follow-up calls
+                                     to ensure long-term results.
+                                </li>
+                            </ul>
+                        </li>
+                        <br>
+                        <p style="text-align: left; padding: 0;">
+                            Sessions are scheduled weekly to maintain momentum and build upon each client’s progress
+                        </p>
+                    </ul>
+                    
+                    <h2>How do you accept payment?</h2>
+                    <p>
+                        Upon booking, you will receive a <b> tax invoice</b> with detailed payment instructions. Payments can be
+                        made via:
+                    </p>
+                    <ul>
+                        <li>Bank transfer.</li>
+                        <li>
+                            Other methods outlined on the invoice.
+                            If you have any specific payment requirements, feel free to discuss them with me directly.
+                        </li>
+                    </ul>
+
+                    <h2>Do you offer payment plans?</h2>
+                    <ul>
+                        <p style="padding: 0; margin: 0;">
+                            Not at the moment, but I am actively working on introducing flexible payment plans in the future.
+                            My goal is to make coaching accessible for everyone, and I look forward to offering more options
+                            soon.
+                        </p>
+                    </ul>
+
+                    <h2>Why should I hire you as my coach?</h2>
+                    <p style="text-align: left;">Here’s what sets me apart:</p>
+                    <ul>
+                        <li>
+                            <b>Certified Expertise:</b> I am a qualified speech therapist with a Master’s degree, bringing
+                            professional knowledge and proven techniques to every session.
+                        </li>
+                        <li>
+                            <b>Relatable and Down-to-Earth:</b> My own experiences with communication challenges in the
+                            past help me connect with clients on a personal level.
+                        </li>
+                        <li>
+                            <b>Personalized Approach:</b> Each coaching plan is uniquely tailored to suit your goals,
+                            challenges, and lifestyle.
+                        </li>
+                        <li>
+                            <b>Professional and Caring:</b> : I bring nearly four years of hands-on experience working with
+                            individuals and groups, combined with a genuine passion for helping people succeed in their
+                            communication journey.                            
+                        </li>
+                        <br>
+                        <p>Let’s work together to help you communicate confidently and authentically in any situation!</p>
+                    </ul>
+
+                    <script>
+                        document.querySelectorAll('.faq-question').forEach(question => {
+                            question.addEventListener('click', () => {
+                                const answer = question.nextElementSibling;
+
+                                // Toggle visibility
+                                answer.classList.toggle('visible');
+                            });
+                        });
+                    </script>
                 </div>
             </div>
 
