--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </script>
         </div>
 
-        <div class="booking" style="background-color: white;">
+        <div class="booking">
             <div class="fade-in-section">
                 <h1>Let’s Get Started</h1>
                 <p>
