services page temporary

--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
-    <title>About Me</title>
+    <title>Services</title>
 
 </head>
 <body>
@@ -24,12 +24,7 @@
             <div class="content1">
                 <div class="fade-in-section">
                     <h1>Services & Pricing</h1>
-                    <p style="border-bottom: 1px solid #5390ff; padding-bottom: 3%;     margin-left: 12%;
-                    margin-right: 12%;
-                    padding-bottom: 3%;
-                    max-width: 90%;
-                    flex-grow: 1;
-                    flex-basis: 0;">
+                    <p style="border-bottom: 1px solid #5390ff; padding-bottom: 3%; margin-left: 12%; margin-right: 12%;">
                         At Speak Savvy, I provide flexible and affordable communication coaching options to suit your
                         needs and goals. Explore the services and pricing below to find what works best for you.
                     </p>
@@ -63,6 +58,38 @@
                             Let’s discuss your goals, challenges, and how I can help you succeed.
                         </li>
                     </ul>
+
+                    <h2>Single Sessions</h2>
+                    <ul>
+                        <li style="list-style-type: disc;">
+                            <b>45 Minutes:</b> $40
+                        </li>
+                        <li>
+                            <b>1 Hour:</b> $50
+                        </li>
+                    </ul>
+
+                    <h2>Monthly Packages</h2>
+                    <p>Ideal for those seeking consistent support and progress.</p>
+                    <ul>
+                        <li>
+                            <b>4 Sessions:</b> $200
+                        </li>
+                        <li style="list-style-type: none;">
+                            Includes four 1-hour sessions + four 15-minute follow-up calls for personalized guidance.
+                        </li>
+                    </ul>
+
+                    <h2>3-Month Packages</h2>
+                    <p>For long-term transformation and deeper progress.</p>
+                    <ul>
+                        <li style="list-style-type: disc;">
+                            <b>12 Sessions:</b> $500
+                        </li>
+                        <li style="list-style-type: none;">
+                            Includes four 1-hour sessions + four 15-minute follow-up calls for personalized guidance.
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -86,6 +113,16 @@
                     });
                 });
             </script>
+        </div>
+
+        <div class="booking" style="background-color: white;">
+            <div class="fade-in-section">
+                <p>
+                    No matter the option you choose, my goal is to provide tailored coaching that helps you build
+                    confidence, clarity, and authentic communication skills. Ready to start? 
+                </p>
+                <a href="https://youtu.be/boZFZuLy72w?si=WLw_cUrsi4laB5q4"><button>BOOK HERE FOR FREE INITIAL CONSULTATION</button></a>
+            </div>
         </div>
 
         <div id="footer" style="min-height: 5%;">
