empty testimonials page

--- a/testimonials.html
+++ b/testimonials.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="content1">
                 <div class="fade-in-section">
-                    <h1>About Me</h1>
+                    <!-- <h1>About Me</h1>
                     <p>
                         Hi my name is Hannah! I’m a certified practicing speech-language pathologist with nearly four
                         years of experience helping individuals transform their communication. My ultimate goal is to
@@ -57,7 +57,7 @@
                     <p style="text-align: left;"><b>Cerifications</b></p>
                     <ul>
                         <li>2021 – Bachelor of Applied Science and Master of Speech Therapy at La Trobe University</li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
 
