--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="background-color: white;">
         <div id="header" style="min-height: 10%;">
             <script>
                 fetch('./fragments/header.html')
