--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>
                     <b>Book your free 30-minute consultation today</b> and take the first step toward mastering your communication!
                 </p>
-                <a href="https://youtu.be/boZFZuLy72w?si=WLw_cUrsi4laB5q4"><button>BOOK HERE FOR FREE INITIAL CONSULTATION</button></a>
+                <a href="https://youtu.be/tVUDJs6_A-0?si=fB5l5yYWCBp3jxl3"><button>BOOK HERE FOR FREE INITIAL CONSULTATION</button></a>
             </div>
         </div>
 
